--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsc && node dist/index.js"
+    "start": "node dist/server.js",
+    "dev": "tsc && node dist/server.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.24.3",
+    "@supabase/supabase-js": "^2.94.0",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "ws": "^8.18.3",
     "zod": "^3.22.0"
   },
   "devDependencies": {
-    "@types/node": "^20.19.25",
+    "@types/body-parser": "^1.19.6",
+    "@types/express": "^5.0.6",
+    "@types/node": "^20.19.31",
+    "@types/qs": "^6.14.0",
+    "@types/serve-static": "^2.2.0",
     "@types/ws": "^8.18.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
